# chatfilesrs

./: .gitignore  Cargo.toml  README.md  SKILL.md  cf  justfile
dev/scripts/info/: docs.sh
dev/scripts/lib/: log.sh
src/: lib.rs  log.rs  main.rs
src/cli/: commands.rs  mod.rs
src/core/: admin.rs  chatfile.rs  clear.rs  dirs.rs  error.rs  mod.rs  names.rs  ops.rs  session.rs
src/web/: server.rs
tests/: integration.rs
